fix: Hide Overflow-X

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,3 +15,9 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width: 768px) {
+  #__nuxt {
+    overflow-x: hidden;
+  }
+}
